--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.539.0",
     "mongoose": "^7.5.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
@@ -18,11 +19,11 @@
     "@types/node": "^20.5.9",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "typescript": "^5.2.2",
     "autoprefixer": "^10.4.15",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^14.0.0",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
-    "eslint": "^8.48.0",
-    "eslint-config-next": "^14.0.0"
+    "typescript": "^5.2.2"
   }
 }
