--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,1 @@
-MONGODB_URI=mongodb://0.0.0.0:27017/next-mongodb-app
-
-# Replace with your actual MongoDB connection string
-# Example for MongoDB Atlas:
-# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/your-database?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://hamzaaziz:Hamza4320%40@cluster0.2tfs2tg.mongodb.net/next-mongodb-app?retryWrites=true&w=majority&appName=Cluster0
